# the-worst

./: Cargo.toml  README.md
crates/the-worst-app/: Cargo.toml
crates/the-worst-app/src/: app.rs  colors.rs  keyboard.rs  main.rs  pixel_logo.rs  renderer.rs  tab.rs
crates/the-worst-core/: Cargo.toml
crates/the-worst-core/src/: cell.rs  grid.rs  lib.rs  performer.rs  pty.rs
