[package]
name    = "the-worst-core"
version = "0.1.0"
edition = "2021"

[dependencies]
portable-pty      = { workspace = true }
vte               = { workspace = true }
crossbeam-channel = { workspace = true }
parking_lot       = { workspace = true }
unicode-width     = { workspace = true }
log               = { workspace = true }
